Fixed nav to display horizontally on small-large screens

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,5 @@
 html {
-box-sizing: border-box;
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
-
 font-family: sans-serif;
-}
-
-*, *::before, *::after {
-	box-sizing: inherit;
 }
 
 ol {
@@ -75,4 +65,4 @@ footer {
 @media only screen and (min-width: 50em) {
 
 }
-}
+
